--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: About Me
 	<img src="images/profile.jpg" alt="Profile" style="width:50%;height:50%">
 </center>
 <br/>
-
+<div style="margin-left: 20px;">
 I am currently a M.S. student in <a href="https://cs.kaist.ac.kr/" style ="color:#867DDA;">CS Department</a> at Korea Advanced Institute of Science and Technology and 
 supervised by <a href="http://ic.kaist.ac.kr/wiki/wiki.cgi?UichinLee" style ="color:#867DDA;">Prof. Uchin Lee</a> in ICLab@KAIST. 
 I received my B.S. degree in <a href="http://mbe.ewha.ac.kr/" style ="color:#867DDA;">Mechanical and Biomedical Engineering</a> from Ewha Womans University in 2021.
@@ -15,9 +15,10 @@ I received my B.S. degree in <a href="http://mbe.ewha.ac.kr/" style ="color:#867
 
 Recently, I want to do a study of predicting certain situations or suggesting proactive solutions by utilizing data. 
 To more specific, I am interested in building a smart environment that can improve user quality of life or increase productivity through sensor data analysis.
-  
+
 <br/>
 <br/>
 
 <h4><b>Interactive Computing Lab</b></h4>
 <i>&nbsp;291 Daehak-ro, Yuseong-gu, Daejeon 34141, Republic of Korea</i>
+</div>
